config: remove PMEM, reduce FIMC1 alloc
Change-Id: Ib4cc67c085bb9deab6fe1e0bcc80688155bb5c3b

--- a/arch/arm/configs/cyanogenmod_n7000_defconfig
+++ b/arch/arm/configs/cyanogenmod_n7000_defconfig
@@ -1193,14 +1193,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_SENSORS_LIS3LV02D is not set
 CONFIG_MISC_DEVICES=y
 # CONFIG_AD525X_DPOT is not set
-CONFIG_ANDROID_PMEM=y
-
-#
-# Reserved memory configurations
-#
-CONFIG_ANDROID_PMEM_MEMSIZE_PMEM=4096
-CONFIG_ANDROID_PMEM_MEMSIZE_PMEM_GPU1=4
-CONFIG_ANDROID_PMEM_MEMSIZE_PMEM_CAM=0
+# CONFIG_ANDROID_PMEM is not set
 # CONFIG_INTEL_MID_PTI is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
@@ -2052,6 +2045,7 @@ CONFIG_VIDEO_MALI400MP=y
 CONFIG_MALI_OSMEM_ONLY=y
 # CONFIG_MALI_DED_OSMEM is not set
 # CONFIG_VIDEO_MALI400MP_DEBUG is not set
+# CONFIG_VIDEO_MALI400MP_STREAMLINE_PROFILING is not set
 CONFIG_VIDEO_MALI400MP_DVFS=y
 CONFIG_VIDEO_FIMG2D=y
 # CONFIG_VIDEO_FIMG2D_DEBUG is not set
@@ -2064,7 +2058,7 @@ CONFIG_VIDEO_JPEG=y
 # Reserved memory configurations
 #
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC0=5120
-CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC1=32644
+CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC1=15360
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC2=25600
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC3=7168
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_MFC0=20480
